objects/ASI_CRM_Internal_Complaint__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Bottling_Date__c</fullName>
        <label>Bottling Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Brand__c</fullName>
        <formula>ASI_CRM_CN_SKU_Code__r.ASI_MFM_Item_Group__r.ASI_MFM_Sub_brand__r.ASI_MFM_Brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_CMS_No_Ref__c</fullName>
        <label>CMS No. Ref</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Complaint_Qty_btl__c</fullName>
        <label>Complaint Qty (btl)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Complaint_Qty_case__c</fullName>
        <label>Complaint Qty (case)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Complait_Qty_9L__c</fullName>
        <label>Complait Qty (9L)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_DHL_EXP_No__c</fullName>
        <label>DHL EXP No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Damage_Category__c</fullName>
        <label>Damage Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cap Damage</fullName>
                </value>
                <value>
                    <fullName>Label Damage</fullName>
                </value>
                <value>
                    <fullName>Faulty bottle</fullName>
                </value>
                <value>
                    <fullName>Indicator issue</fullName>
                </value>
                <value>
                    <fullName>Cap Damage - cork issue</fullName>
                </value>
                <value>
                    <fullName>Leakage</fullName>
                </value>
                <value>
                    <fullName>Liquid issue</fullName>
                </value>
                <value>
                    <fullName>Shortage</fullName>
                </value>
                <value>
                    <fullName>Old vintage</fullName>
                </value>
                <value>
                    <fullName>Laser Mark issue</fullName>
                </value>
                <value>
                    <fullName>Logo Damage</fullName>
                </value>
                <value>
                    <fullName>Bottle Damage</fullName>
                </value>
                <value>
                    <fullName>Packing Damage</fullName>
                </value>
                <value>
                    <fullName>Other reason</fullName>
                </value>
                <value>
                    <fullName>PUMA sticker issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Damage_Description__c</fullName>
        <label>Damage Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Free_Goods_Request_Ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Free Goods Request Ref.</label>
        <referenceTo>ASI_FOC_Free_Goods_Request__c</referenceTo>
        <relationshipLabel>Internal Complaints</relationshipLabel>
        <relationshipName>Internal_Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Inv_No__c</fullName>
        <label>Inv No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Item_Desc_Eng__c</fullName>
        <formula>ASI_CRM_CN_SKU_Code__r.ASI_MFM_SKU_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Desc.(Eng)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Lot_No__c</fullName>
        <label>Lot No.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Package__c</fullName>
        <formula>ASI_CRM_CN_SKU_Code__r.ASI_FOC_Packing_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Package</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Reference_No__c</fullName>
        <label>Reference No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_SKU_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_SKU_Code__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN FOC SKU, CN POSM SKU</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Internal Complaints</relationshipLabel>
        <relationshipName>Internal_Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Solution_rejected_reason__c</fullName>
        <label>Solution/Rejected Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New complaint</fullName>
                    <default>true</default>
                    <label>New complaint</label>
                </value>
                <value>
                    <fullName>Complaint send to BO</fullName>
                </value>
                <value>
                    <fullName>Sample Request Initiated</fullName>
                </value>
                <value>
                    <fullName>Sample Ready</fullName>
                </value>
                <value>
                    <fullName>Sample Requested via FG</fullName>
                </value>
                <value>
                    <fullName>FG Request to W/H</fullName>
                </value>
                <value>
                    <fullName>Sample Handover to SP</fullName>
                </value>
                <value>
                    <fullName>Sample send to BO</fullName>
                </value>
                <value>
                    <fullName>Completed (Justified)</fullName>
                </value>
                <value>
                    <fullName>Completed (Rejected)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sub_Brand__c</fullName>
        <description>ASI_CRM_CN_SKU_Code__r.ASI_MFM_Item_Group__r.ASI_MFM_Sub_brand__c</description>
        <formula>ASI_CRM_CN_SKU_Code__r.ASI_MFM_Sub_brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_TOV_No__c</fullName>
        <formula>ASI_CRM_CN_Free_Goods_Request_Ref__r.ASI_FOC_JDE_Order_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TOV No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Warehouse__c</fullName>
        <label>Warehouse</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>SZ</fullName>
                </value>
                <value>
                    <fullName>SH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Owner__c</fullName>
        <formula>Owner:User.FirstName + &quot; &quot; + Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product_Category__c</fullName>
        <formula>ASI_CRM_CN_SKU_Code__r.ASI_MFM_Sub_brand__r.ASI_MFM_Brand__r.ASI_HK_CRM_Product_Category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sample_Request_Description__c</fullName>
        <label>Sample Request Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sample_Request_Quantity__c</fullName>
        <label>Sample Request Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Internal Complaint</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Brand__c</columns>
        <columns>ASI_CRM_CN_Item_Desc_Eng__c</columns>
        <columns>ASI_CRM_CN_Damage_Category__c</columns>
        <columns>ASI_CRM_CN_Damage_Description__c</columns>
        <columns>ASI_CRM_CN_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Complaint_Send_to_BO_Mass_Edit</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Status__c</columns>
        <columns>ASI_CRM_CN_CMS_No_Ref__c</columns>
        <columns>ASI_CRM_CN_Solution_rejected_reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Internal_Complaint__c.ASI_CRM_CN_Complaint_Send_to_BO</value>
        </filters>
        <label>Complaint Send to BO-Mass Edit</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Completed_Justified_Mass_Edit</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Status__c</columns>
        <columns>ASI_CRM_CN_CMS_No_Ref__c</columns>
        <columns>ASI_CRM_CN_Solution_rejected_reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Internal_Complaint__c.ASI_CRM_CN_Completed_Justified</value>
        </filters>
        <label>Completed (Justified)-Mass Edit</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Completed_Justified_Mass_Edit1</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Status__c</columns>
        <columns>ASI_CRM_CN_CMS_No_Ref__c</columns>
        <columns>ASI_CRM_CN_Solution_rejected_reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Internal_Complaint__c.ASI_CRM_CN_Completed_Rejected</value>
        </filters>
        <label>Completed (Rejected)-Mass Edit</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FG_Request_to_W_H_Mass_Edit</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Status__c</columns>
        <columns>ASI_CRM_CN_CMS_No_Ref__c</columns>
        <columns>ASI_CRM_CN_Solution_rejected_reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Internal_Complaint__c.ASI_CRM_CN_FG_Request_to_W_H</value>
        </filters>
        <label>FG Request to W/H-Mass Edit</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_Compaint_Mass_Edit</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Status__c</columns>
        <columns>ASI_CRM_CN_CMS_No_Ref__c</columns>
        <columns>ASI_CRM_CN_Solution_rejected_reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Internal_Complaint__c.ASI_CRM_CN_New_Compaint</value>
        </filters>
        <label>New Compaint-Mass Edit</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sample_Handover_to_SP_Mass_Edit</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Status__c</columns>
        <columns>ASI_CRM_CN_CMS_No_Ref__c</columns>
        <columns>ASI_CRM_CN_Solution_rejected_reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Internal_Complaint__c.ASI_CRM_CN_Sample_Handover_to_SP</value>
        </filters>
        <label>Sample Handover to SP-Mass Edit</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sample_Ready_Mass_Edit</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Status__c</columns>
        <columns>ASI_CRM_CN_CMS_No_Ref__c</columns>
        <columns>ASI_CRM_CN_Solution_rejected_reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Internal_Complaint__c.ASI_CRM_CN_Sample_Ready</value>
        </filters>
        <label>Sample Ready-Mass Edit</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sample_Request_Initiated_Mass_Edit</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Status__c</columns>
        <columns>ASI_CRM_CN_CMS_No_Ref__c</columns>
        <columns>ASI_CRM_CN_Solution_rejected_reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Internal_Complaint__c.ASI_CRM_CN_Sample_Request_Initiated</value>
        </filters>
        <label>Sample Request Initiated-Mass Edit</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sample_Requested_via_FG_Mass_Edit</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Status__c</columns>
        <columns>ASI_CRM_CN_CMS_No_Ref__c</columns>
        <columns>ASI_CRM_CN_Solution_rejected_reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Internal_Complaint__c.ASI_CRM_CN_Sample_Requested_via_FG</value>
        </filters>
        <label>Sample Requested via FG-Mass Edit</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sample_send_to_BO_Mass_Edit</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Status__c</columns>
        <columns>ASI_CRM_CN_CMS_No_Ref__c</columns>
        <columns>ASI_CRM_CN_Solution_rejected_reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Internal_Complaint__c.ASI_CRM_CN_Sample_send_to_BO</value>
        </filters>
        <label>Sample send to BO-Mass Edit</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IC-{0000000}</displayFormat>
        <label>Internal Complaint Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Complaints</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Complaint_Send_to_BO</fullName>
        <active>true</active>
        <label>Complaint Send to BO</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Completed_Justified</fullName>
        <active>true</active>
        <label>Completed (Justified)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Completed_Rejected</fullName>
        <active>true</active>
        <label>Completed (Rejected)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_FG_Request_to_W_H</fullName>
        <active>true</active>
        <label>FG Request to W/H</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_New_Compaint</fullName>
        <active>true</active>
        <label>New Compaint</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Sample_Handover_to_SP</fullName>
        <active>true</active>
        <label>Sample Handover to SP</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Sample_Ready</fullName>
        <active>true</active>
        <label>Sample Ready</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Sample_Request_Initiated</fullName>
        <active>true</active>
        <label>Sample Request Initiated</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Sample_Requested_via_FG</fullName>
        <active>true</active>
        <label>Sample Requested via FG</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Sample_send_to_BO</fullName>
        <active>true</active>
        <label>Sample send to BO</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ASI_CN_Internal_Complaint_CMS_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT( ASI_CRM_CN_Status__c ) = &quot;Complaint send to BO&quot;&amp;&amp;ISBLANK(ASI_CRM_CN_CMS_No_Ref__c )</errorConditionFormula>
        <errorMessage>Please input CMS No. Ref.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CN_Internal_Complaint_FRW_Validation</fullName>
        <active>true</active>
        <description>FG Request to W/H Validation</description>
        <errorConditionFormula>TEXT(ASI_CRM_CN_Status__c) = &quot;FG Request to W/H&quot;  &amp;&amp; ISBLANK(  ASI_CRM_CN_TOV_No__c  )</errorConditionFormula>
        <errorMessage>Please input TOV No.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CN_Internal_Complaint_SRF_Validation</fullName>
        <active>true</active>
        <description>Sample Request Via FG Validation</description>
        <errorConditionFormula>TEXT(ASI_CRM_CN_Status__c) = &quot;Sample Requested via FG&quot;  &amp;&amp; ISBLANK( ASI_CRM_CN_Free_Goods_Request_Ref__c )</errorConditionFormula>
        <errorMessage>Please input Free Goods Request Ref.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CN_Internal_Complaint_SRQ_Validation</fullName>
        <active>true</active>
        <description>Sample Request Quantity Validation</description>
        <errorConditionFormula>TEXT(ASI_CRM_CN_Status__c) = &quot;Sample Request Initiated&quot;  &amp;&amp; ISBLANK(  ASI_CRM_Sample_Request_Quantity__c  )</errorConditionFormula>
        <errorMessage>Please input Sample Request Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_CN_Complaint_Qty_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(ASI_CRM_CN_Complaint_Qty_btl__c)&amp;&amp;ISBLANK(ASI_CRM_CN_Complaint_Qty_case__c)&amp;&amp;ISBLANK(ASI_CRM_CN_Complait_Qty_9L__c)</errorConditionFormula>
        <errorMessage>Please fill in at least one of the Complaint QTY fields.</errorMessage>
    </validationRules>
</CustomObject>